[tool.poetry]
name = "lebotmusicien"
version = "0.1.0"
description = "lebotmusicien née lebageuttemusicien is a singing baguette that serves our Discord server"
authors = ["JeS24"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
youtube-dl = "^2021.1.24"
async-timeout = "^3.0.1"
discord = "^1.0.1"
pynacl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
